--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,9 @@
     "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
     "react-native": "0.66.0",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-header-scroll-view": "^1.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.8.0",
     "react-native-vector-icons": "^8.1.0"
