--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/native-stack": "^6.2.2",
+    "axios": "^0.23.0",
     "lottie-ios": "^3.2.3",
     "lottie-react-native": "^4.1.3",
     "react": "17.0.2",
